// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Does not send plugin timings if no plugins 1`] = `
"buildbot.build.stage.duration:0|d|#stage:build_command,parent:run_netlify_build
buildbot.build.stage.duration:0|d|#stage:frameworks_api_config,parent:run_netlify_build
buildbot.build.stage.duration:0|d|#stage:get_plugins_options,parent:run_netlify_build
buildbot.build.stage.duration:0|d|#stage:others,parent:run_netlify_build
buildbot.build.stage.duration:0|d|#stage:pre_cleanup,parent:run_netlify_build
buildbot.build.stage.duration:0|d|#stage:resolve_config,parent:run_netlify_build
buildbot.build.stage.duration:0|d|#stage:spa_fallback,parent:run_netlify_build
buildbot.build.stage.duration:0|d|#stage:start_plugins,parent:run_netlify_build
buildbot.build.stage.duration:0|d|#stage:system,parent:run_netlify_build_per_type
buildbot.build.stage.duration:0|d|#stage:user,parent:run_netlify_build_per_type"
`;

exports[`Does not send timings of community plugins 1`] = `
"buildbot.build.stage.duration:0|d|#stage:build_command,parent:run_netlify_build
buildbot.build.stage.duration:0|d|#stage:frameworks_api_config,parent:run_netlify_build
buildbot.build.stage.duration:0|d|#stage:get_plugins_options,parent:run_netlify_build
buildbot.build.stage.duration:0|d|#stage:load_plugins,parent:run_netlify_build
buildbot.build.stage.duration:0|d|#stage:others,parent:run_netlify_build
buildbot.build.stage.duration:0|d|#stage:plugin,parent:run_netlify_build_per_type
buildbot.build.stage.duration:0|d|#stage:pre_cleanup,parent:run_netlify_build
buildbot.build.stage.duration:0|d|#stage:resolve_config,parent:run_netlify_build
buildbot.build.stage.duration:0|d|#stage:run_plugins,parent:run_netlify_build
buildbot.build.stage.duration:0|d|#stage:spa_fallback,parent:run_netlify_build
buildbot.build.stage.duration:0|d|#stage:start_plugins,parent:run_netlify_build
buildbot.build.stage.duration:0|d|#stage:system,parent:run_netlify_build_per_type
buildbot.build.stage.duration:0|d|#stage:user,parent:run_netlify_build_per_type"
`;

exports[`Sends timing for edge functions bundling 1`] = `
"buildbot.build.functions:0|c|#type:edge:generated
buildbot.build.functions:0|c|#type:edge:user
buildbot.build.stage.duration:0|d|#stage:edge_functions_bundling,parent:run_netlify_build
buildbot.build.stage.duration:0|d|#stage:frameworks_api_config,parent:run_netlify_build
buildbot.build.stage.duration:0|d|#stage:get_plugins_options,parent:run_netlify_build
buildbot.build.stage.duration:0|d|#stage:others,parent:run_netlify_build
buildbot.build.stage.duration:0|d|#stage:pre_cleanup,parent:run_netlify_build
buildbot.build.stage.duration:0|d|#stage:resolve_config,parent:run_netlify_build
buildbot.build.stage.duration:0|d|#stage:spa_fallback,parent:run_netlify_build
buildbot.build.stage.duration:0|d|#stage:start_plugins,parent:run_netlify_build
buildbot.build.stage.duration:0|d|#stage:system,parent:run_netlify_build_per_type
buildbot.build.stage.duration:0|d|#stage:user,parent:run_netlify_build_per_type"
`;

exports[`Sends timing for functions bundling 1`] = `
"buildbot.build.functions:0|c|#type:lambda:generated,bundler:zisi,fallback:false,warnings:false
buildbot.build.functions:0|c|#type:lambda:user,bundler:zisi,fallback:false,warnings:false
buildbot.build.stage.duration:0|d|#stage:frameworks_api_config,parent:run_netlify_build
buildbot.build.stage.duration:0|d|#stage:functions_bundling,parent:run_netlify_build,bundler:zisi,fallback:false,warnings:false
buildbot.build.stage.duration:0|d|#stage:get_plugins_options,parent:run_netlify_build
buildbot.build.stage.duration:0|d|#stage:others,parent:run_netlify_build
buildbot.build.stage.duration:0|d|#stage:pre_cleanup,parent:run_netlify_build
buildbot.build.stage.duration:0|d|#stage:resolve_config,parent:run_netlify_build
buildbot.build.stage.duration:0|d|#stage:spa_fallback,parent:run_netlify_build
buildbot.build.stage.duration:0|d|#stage:start_plugins,parent:run_netlify_build
buildbot.build.stage.duration:0|d|#stage:system,parent:run_netlify_build_per_type
buildbot.build.stage.duration:0|d|#stage:user,parent:run_netlify_build_per_type"
`;

exports[`Sends timings of Netlify maintained plugins 1`] = `
"buildbot.build.stage.duration:0|d|#stage:build_command,parent:run_netlify_build
buildbot.build.stage.duration:0|d|#stage:frameworks_api_config,parent:run_netlify_build
buildbot.build.stage.duration:0|d|#stage:get_plugins_options,parent:run_netlify_build
buildbot.build.stage.duration:0|d|#stage:load_plugins,parent:run_netlify_build
buildbot.build.stage.duration:0|d|#stage:netlify_plugin_nextjs,parent:run_plugins
buildbot.build.stage.duration:0|d|#stage:netlify_plugin_sitemap,parent:run_plugins
buildbot.build.stage.duration:0|d|#stage:onBuild,parent:netlify_plugin_nextjs
buildbot.build.stage.duration:0|d|#stage:onBuild,parent:netlify_plugin_sitemap
buildbot.build.stage.duration:0|d|#stage:onPostBuild,parent:netlify_plugin_sitemap
buildbot.build.stage.duration:0|d|#stage:others,parent:run_netlify_build
buildbot.build.stage.duration:0|d|#stage:plugin,parent:run_netlify_build_per_type
buildbot.build.stage.duration:0|d|#stage:pre_cleanup,parent:run_netlify_build
buildbot.build.stage.duration:0|d|#stage:resolve_config,parent:run_netlify_build
buildbot.build.stage.duration:0|d|#stage:run_plugins,parent:run_netlify_build
buildbot.build.stage.duration:0|d|#stage:spa_fallback,parent:run_netlify_build
buildbot.build.stage.duration:0|d|#stage:start_plugins,parent:run_netlify_build
buildbot.build.stage.duration:0|d|#stage:system,parent:run_netlify_build_per_type
buildbot.build.stage.duration:0|d|#stage:user,parent:run_netlify_build_per_type"
`;
